ingress-nginx/nginx-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: cds
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      namespace: cds
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
          - containerPort: 443
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: confnginx
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-custom
  namespace: cds
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
    name: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-custom
  namespace: cds
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - bdw.demozone.vn
    secretName: cds-secret
  - hosts:
    - bi.demozone.vn
    secretName: cds-secret
  - hosts:
    - eform.demozone.vn
    secretName: cds-secret

  rules:
  - host: 'bi.demozone.vn'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-custom
            port:
              number: 443
  - host: 'eform.demozone.vn'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-custom
            port:
              number: 443
