ingress-nginx/rancher.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # ingress.kubernetes.io/force-ssl-redirect: "true"
    # kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.org/server-snippet: |
    #   location / {
    #     proxy_set_header Upgrade $http_upgrade;
    #     proxy_http_version 1.1;
    #     proxy_set_header X-Forwarded-Host $http_host;
    #     proxy_set_header X-Forwarded-Proto $scheme;
    #     proxy_set_header X-Forwarded-For $remote_addr;
    #     proxy_set_header Host $host;
    #     proxy_set_header Connection "upgrade";
    #     proxy_cache_bypass $http_upgrade;
    #   }
    # nginx.org/ssl-services: rancher
  name: rancher-ingress
  namespace: cattle-system
spec:
  ingressClassName: nginx
  rules:
  - host: rancher.idevops.io.vn
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              name: https-internal
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rancher.idevops.io.vn
    secretName: tls-rancher-ingress-cert-manager
